# omniverse_learning

./: .gitignore  Readme.md  pyproject.toml
assets/: Biped_robot.usdz
exts/: README.md
exts/exts/omniverse_learning.tools/config/: extension.toml
exts/exts/omniverse_learning.tools/docs/: README.md  index.rst
exts/exts/omniverse_learning.tools/omniverse_learning/: __init__.py
exts/exts/omniverse_learning.tools/omniverse_learning/tools/: extension.py
exts/exts/omniverse_learning.tools/omniverse_learning/tools/actions/: __init__.py  move_chair.py
exts/exts/omniverse_learning.tools/omniverse_learning/tools/tests/: test_hello_world.py
scripts/: move_chair.py
